<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#091227"
    android:padding="12dp"
    android:layout_height="match_parent"
    tools:context=".musicPlayerActivity.MusicPlayerActivity">

    <RelativeLayout
        android:id="@+id/rlBackAndPlayNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBackButton"
            android:layout_width="30dp"
            android:layout_height="23dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/back_button"
            android:contentDescription="@string/back_button_description"/>

        <TextView
            android:id="@+id/tvPlayingNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_light"
            android:text="@string/playing_now"
            android:textColor="#EAF0FF"
            android:textSize="20sp" />

    </RelativeLayout>



    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutAppIconImage"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/rlBackAndPlayNow">

        <ImageView
            android:id="@+id/ivAppIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/music_album_content_description"
            android:src="@drawable/ic_music_icon"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />


    </androidx.appcompat.widget.LinearLayoutCompat>


    <RelativeLayout
        android:id="@+id/rlTitleAndArtistSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutAppIconImage">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvMusicTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/roboto_medium"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:text="Moment Apart"
                android:textColor="#EAF0FF"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvArtistName"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_marginTop="4dp"
                android:ellipsize="marquee"
                android:text="Neffex "
                android:textColor="#A5C0FF"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMusicTitle" />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlPlayTimeSection"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlTitleAndArtistSection">

        <TextView
            android:id="@+id/tvCurrentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="00:00"
            android:textColor="#A5C0FF"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvTotalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="40:00"
            android:textColor="#A5C0FF" />


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/linearLayoutSeekbarSection"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlPlayTimeSection">


        <SeekBar
            android:id="@+id/sbMusicLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:thumbTint="#00BCD4"
            android:progressTint="#FFA5C0FF"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPrevPausePlaySection"
        android:layout_width="385dp"
        android:layout_height="84dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutSeekbarSection">

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/ivPreviousSong"
                android:background="@drawable/ripple"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/previous_song_description"
                android:src="@drawable/previous_song" />

            <ImageView
                android:background="@drawable/ripple"
                android:id="@+id/ivPausePlay"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/pause_song_description"
                android:src="@drawable/pause_song" />

            <ImageView
                android:background="@drawable/ripple"
                android:id="@+id/ivNextSong"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/next_song_description"
                android:src="@drawable/next_song" />

        </RelativeLayout>
    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bnvMusicPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#091227"
        app:itemIconTint="#EAF0FF"
        app:itemTextColor="#EAF0FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPrevPausePlaySection"
        app:menu="@menu/music_player_bottom_nav_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>